--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi, I'm Deer</title>
+    <title>Hi, I'm Mr_Onion</title>
     <link rel="icon" href="./assets/top.png">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
@@ -87,32 +87,23 @@
     <!-- 主题自动切换，基于东八区时间 -->
 
     <div class="container">
-        <h1>Hi 👋, I'm Deer</h1>
+        <h1>Hi 👋, I'm Mr_Onion</h1>
         <div class="intro">
             <p id="hitokoto">正在加载一言...</p>
         </div>
 
         <div class="links">
-            <a href="https://github.com/deerwan" class="link github" target="_blank">
+            <a href="https://github.com/SuperUseryjh" class="link github" target="_blank">
                 <i class="ri-github-fill"></i>
             </a>
-            <a href="mailto:739914756@qq.com" class="link email">
+            <a href="mailto:yaoonion@gmail.com" class="link email">
                 <i class="ri-mail-line"></i>
             </a>
-            <a href="https://hexo.952780.xyz" class="link blog" target="_blank">
+            <a href="https://mr-onion-blog.fun" class="link blog" target="_blank">
                 <i class="ri-article-line"></i>
             </a>
-            <a href="https://www.zhihu.com/people/san-san-61-6" class="link zhihu" target="_blank">
-                <i class="ri-zhihu-line"></i>
-            </a>
-            <a href="https://space.bilibili.com/31517542?spm_id_from=333.1007.0.0" class="link bilibili" target="_blank">
+            <a href="https://space.bilibili.com/668245690" class="link bilibili" target="_blank">
                 <i class="ri-bilibili-fill"></i>
-            </a>
-            <a href="https://zhiyou.smzdm.com/member/8735360783/" class="link smzdm" target="_blank">
-                <i class="ri-price-tag-3-line"></i>
-            </a>
-            <a href="https://qm.qq.com/cgi-bin/qm/qr?k=zTTTlwf4UfHZUQf3mJ5E4lfhEJv7TO6u&jump_from=webapi&authKey=nKkccmKpMCuhJuzNSzcjZyaLr6eIxeqDuCDJL6A3RQfUYEBV3bCE/lW/ABlq8hCq" class="link qq" target="_blank">
-                <i class="ri-qq-fill"></i>
             </a>
             <a href="javascript:void(0)" class="link theme-switch" onclick="manualToggleTheme()">
                 <i id="theme-icon" class="ri-moon-line"></i>
@@ -121,7 +112,7 @@
 
         <section>
             <div class="projects">
-                <a href="https://blog.952780.xyz" class="project-card" target="_blank">
+                <a href="https://mr-onion-blog.fun" class="project-card" target="_blank">
                     <div class="project-header">
                         <img src="./assets/images/blog.png" class="project-icon" alt="Blog">
                         <div class="project-content">
@@ -130,103 +121,12 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://nezha.952780.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/nezha.png" class="project-icon" alt="Nezha">
-                        <div class="project-content">
-                            <div class="project-title">Nezha</div>
-                            <div class="project-desc">服务器监控</div>
-                        </div>
-                    </div>
-                </a>
-                <!-- 移动网站监控项目到这里 -->
-                <a href="https://status.106996.xyz/" class="project-card" target="_blank">
+                <a href="https://status.mr-onion-blog.fun/" class="project-card" target="_blank">
                     <div class="project-header">
                         <img src="./assets/images/status.png" class="project-icon" alt="Uptimerobot">
                         <div class="project-content">
                             <div class="project-title">Uptimerobot</div>
                             <div class="project-desc">网站监控</div>
-                        </div>
-                    </div>                 
-                </a>
-                <a href="https://pro.952780.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/pro.png" class="project-icon" alt="Pro">
-                        <div class="project-content">
-                            <div class="project-title">Pro</div>
-                            <div class="project-desc">京东登录</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://rabbit.952780.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/rabbit.png" class="project-icon" alt="Rabbit">
-                        <div class="project-content">
-                            <div class="project-title">Rabbit</div>
-                            <div class="project-desc">京东登录</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://sun.952780.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/sunpanel.ico" class="project-icon" alt="SunPanel">
-                        <div class="project-content">
-                            <div class="project-title">SunPanel</div>
-                            <div class="project-desc">自用导航页</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://gh.106996.xyz" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/github.png" class="project-icon" alt="Github">
-                        <div class="project-content">
-                            <div class="project-title">Github</div>
-                            <div class="project-desc">解决国内拉取仓库失败</div>
-                        </div>
-                    </div>                     
-                </a>
-                <a href="https://dc.106996.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/docker1.png" class="project-icon" alt="Dockerhub">
-                        <div class="project-content">
-                            <div class="project-title">Dockerhub</div>
-                            <div class="project-desc">解决国内拉取容器失败</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://github.106996.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/github.png" class="project-icon" alt="Github">
-                        <div class="project-content">
-                            <div class="project-title">Github</div>
-                            <div class="project-desc">GitHub文件加速</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://img.106996.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/tuchuang.png" class="project-icon" alt="ImgHub">
-                        <div class="project-content">
-                            <div class="project-title">ImgHub</div>
-                            <div class="project-desc">我的图床</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://card-tab.106996.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/bookmark.png" class="project-icon" alt="书签">
-                        <div class="project-content">
-                            <div class="project-title">CardTab</div>
-                            <div class="project-desc">简单的书签页</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://ssh.cmliussss.net/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/ssh.png" class="project-icon" alt="WEBSSH">
-                        <div class="project-content">
-                            <div class="project-title">WEBSSH</div>
-                            <div class="project-desc">网页终端</div>
                         </div>
                     </div>                 
                 </a>
@@ -273,8 +173,8 @@
         <footer class="footer">
             <div class="footer-content">
                 <div class="copyright">
-                    Deer © 2025
-                    <a href="https://github.com/deerwan/home" target="_blank" style="color: inherit; text-decoration: none;">
+                    Mr_Onion © 2025
+                    <a href="https://github.com/SuperUseryjh" target="_blank" style="color: inherit; text-decoration: none;">
                         <i class="ri-github-fill"></i> GitHub
                     </a>
                     <!-- 可随意魔改请不要删除 -->
