自定义鼠标指针

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/background.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/cursor-styles.css">
 </head>
 <body>
     <div id="fps" style="position: fixed; top: 10px; right: 10px; color: white; padding: 5px 10px; border-radius: 4px; font-size: 14px; z-index: 9999;">
