--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="./css/cursor-styles.css">
 </head>
 <body>
-    <div id="fps" style="position: fixed; top: 10px; right: 10px; color: white; padding: 5px 10px; border-radius: 4px; font-size: 14px; z-index: 9999;">
-        FPS: 60
-    </div>
+    <div id="fps" style="position: fixed; top: 10px; right: 10px; color: white; padding: 5px 10px; border-radius: 4px; font-size: 14px; z-index: 9999;"></div>
     <div class="nav-trigger"></div>
     
     <nav class="side-nav">
@@ -85,19 +83,20 @@
             </li>
         </ul>
     </nav>
-    <!-- 主题自动切换，基于东八区时间 -->
 
     <div class="container">
         <h1>Hi 👋, I'm Deer</h1>
         <div class="intro">
-            <p id="hitokoto">正在加载一言...</p>
+            <p>✨ 欢迎访问我的个人主页</p>
+            <p>💻 热爱技术，分享生活</p>
+            <p>🚀 记录成长，探索未来</p>
         </div>
 
         <div class="links">
-            <a href="https://github.com/deerwan" class="link github" target="_blank">
+            <a href="https://github.com/deerwan" class="link github" target="_blank" title="GitHub">
                 <i class="ri-github-fill"></i>
             </a>
-            <a href="mailto:739914756@qq.com" class="link email">
+            <a href="mailto:739914756@qq.com" class="link email" title="Email">
                 <i class="ri-mail-line"></i>
             </a>
             <a href="https://blog.952780.xyz" class="link blog" target="_blank">
@@ -124,28 +123,27 @@
             <div class="projects">
                 <a href="https://deerwan.github.io/" class="project-card" target="_blank">
                     <div class="project-header">
-                        <img src="./assets/images/blog.png" class="project-icon" alt="Blog">
+                        <img src="./assets/images/blog.png" class="project-icon" alt="GitHub Pages Blog">
                         <div class="project-content">
-                            <div class="project-title">Blog</div>
-                            <div class="project-desc">我的博客</div>
+                            <div class="project-title">Blog ✍️</div>
+                            <div class="project-desc">分享日常</div>
                         </div>
-                    </div>
+                    </div>                 
                 </a>
                 <a href="https://nezha.952780.xyz/" class="project-card" target="_blank">
                     <div class="project-header">
                         <img src="./assets/images/nezha.png" class="project-icon" alt="Nezha">
                         <div class="project-content">
-                            <div class="project-title">Nezha</div>
+                            <div class="project-title">Nezha 📊</div>
                             <div class="project-desc">服务器监控</div>
                         </div>
                     </div>
                 </a>
-                <!-- 移动网站监控项目到这里 -->
                 <a href="https://status.106996.xyz/" class="project-card" target="_blank">
                     <div class="project-header">
                         <img src="./assets/images/status.png" class="project-icon" alt="Uptimerobot">
                         <div class="project-content">
-                            <div class="project-title">Uptimerobot</div>
+                            <div class="project-title">Uptimerobot 🔍</div>
                             <div class="project-desc">网站监控</div>
                         </div>
                     </div>                 
@@ -154,7 +152,7 @@
                     <div class="project-header">
                         <img src="./assets/images/pro.png" class="project-icon" alt="Pro">
                         <div class="project-content">
-                            <div class="project-title">Pro</div>
+                            <div class="project-title">Pro 🛒</div>
                             <div class="project-desc">京东登录</div>
                         </div>
                     </div>
@@ -163,7 +161,7 @@
                     <div class="project-header">
                         <img src="./assets/images/rabbit.png" class="project-icon" alt="Rabbit">
                         <div class="project-content">
-                            <div class="project-title">Rabbit</div>
+                            <div class="project-title">Rabbit 🐰</div>
                             <div class="project-desc">京东登录</div>
                         </div>
                     </div>
@@ -172,35 +170,8 @@
                     <div class="project-header">
                         <img src="./assets/images/sunpanel.ico" class="project-icon" alt="SunPanel">
                         <div class="project-content">
-                            <div class="project-title">SunPanel</div>
-                            <div class="project-desc">自用导航页</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://gh.106996.xyz" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/github.png" class="project-icon" alt="Github">
-                        <div class="project-content">
-                            <div class="project-title">Github</div>
-                            <div class="project-desc">解决国内拉取仓库失败</div>
-                        </div>
-                    </div>                     
-                </a>
-                <a href="https://dc.106996.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/docker1.png" class="project-icon" alt="Dockerhub">
-                        <div class="project-content">
-                            <div class="project-title">Dockerhub</div>
-                            <div class="project-desc">解决国内拉取容器失败</div>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://github.106996.xyz/" class="project-card" target="_blank">
-                    <div class="project-header">
-                        <img src="./assets/images/github.png" class="project-icon" alt="Github">
-                        <div class="project-content">
-                            <div class="project-title">Github</div>
-                            <div class="project-desc">GitHub文件加速</div>
+                            <div class="project-title">SunPanel 🧭</div>
+                            <div class="project-desc">自用导航</div>
                         </div>
                     </div>
                 </a>
@@ -208,7 +179,7 @@
                     <div class="project-header">
                         <img src="./assets/images/tuchuang.png" class="project-icon" alt="ImgHub">
                         <div class="project-content">
-                            <div class="project-title">ImgHub</div>
+                            <div class="project-title">ImgHub 🖼️</div>
                             <div class="project-desc">我的图床</div>
                         </div>
                     </div>
@@ -217,8 +188,8 @@
                     <div class="project-header">
                         <img src="./assets/images/bookmark.png" class="project-icon" alt="书签">
                         <div class="project-content">
-                            <div class="project-title">CardTab</div>
-                            <div class="project-desc">简单的书签页</div>
+                            <div class="project-title">CardTab 🔖</div>
+                            <div class="project-desc">简单书签</div>
                         </div>
                     </div>
                 </a>
@@ -226,7 +197,7 @@
                     <div class="project-header">
                         <img src="./assets/images/ssh.png" class="project-icon" alt="WEBSSH">
                         <div class="project-content">
-                            <div class="project-title">WEBSSH</div>
+                            <div class="project-title">WEBSSH 🖥️</div>
                             <div class="project-desc">网页终端</div>
                         </div>
                     </div>                 
@@ -265,11 +236,7 @@
             </div>
         </section>
 
-        <!--
-        <div class="ip-info" style="text-align: left; margin: 20px 0;">
-            <p id="ipInfo">正在获取IP信息...</p>
-        </div>
-        -->
+
 
         <footer class="footer">
             <div class="footer-content">
@@ -278,14 +245,12 @@
                     <a href="https://github.com/deerwan/home" target="_blank" style="color: inherit; text-decoration: none;">
                         <i class="ri-github-fill"></i> GitHub
                     </a>
-                    <!-- 可随意魔改请不要删除 -->
                 </div>
             </div>
         </footer>
     </div>
 
     <script src="./js/theme.js"></script>
-    <script src="./js/api.js"></script>
     <script src="./js/fps.js"></script>
 </body>
 </html>
