--- a/index.html
+++ b/index.html
@@ -17,67 +17,67 @@
     <nav class="side-nav">
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="https://dash.cloudflare.com" target="_blank">
+                <a href="https://dash.cloudflare.com" target="_blank" title="Cloudflare">
                     <img src="./assets/images/cloudflare.ico" alt="Cloudflare" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://hub.docker.com" target="_blank">
+                <a href="https://hub.docker.com" target="_blank" title="Docker Hub">
                     <img src="./assets/images/docker1.png" alt="Docker Hub" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://github.com" target="_blank">
+                <a href="https://github.com" target="_blank" title="GitHub">
                     <img src="./assets/images/github.png" alt="GitHub" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://cloud.oracle.com" target="_blank">
+                <a href="https://cloud.oracle.com" target="_blank" title="Oracle Cloud">
                     <img src="./assets/images/oracle.ico" alt="Oracle Cloud" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://serv00.com" target="_blank">
+                <a href="https://serv00.com" target="_blank" title="Serv00">
                     <img src="./assets/images/server00.ico" alt="Serv00" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://vercel.com" target="_blank">
+                <a href="https://vercel.com" target="_blank" title="Vercel">
                     <img src="./assets/images/vercel.ico" alt="Vercel" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://app.spaceship.com" target="_blank">
+                <a href="https://app.spaceship.com" target="_blank" title="Spaceship">
                     <img src="./assets/images/spaceship.png" alt="Spaceship" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://www.namesilo.com" target="_blank">
+                <a href="https://www.namesilo.com" target="_blank" title="Namesilo">
                     <img src="./assets/images/namesilo.png" alt="Namesilo" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://chat.openai.com" target="_blank">
+                <a href="https://chat.openai.com" target="_blank" title="ChatGPT">
                     <img src="./assets/images/chatgpt.png" alt="ChatGPT" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://linux.do" target="_blank">
+                <a href="https://linux.do" target="_blank" title="Linux.do">
                     <img src="./assets/images/linux.png" alt="Linux.do" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://www.itdog.cn" target="_blank">
+                <a href="https://www.itdog.cn" target="_blank" title="ITdog">
                     <img src="./assets/images/itdog.ico" alt="ITdog" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://ipv6-test.ch" target="_blank">
+                <a href="https://ipv6-test.ch" target="_blank" title="IPv6 Test">
                     <img src="./assets/images/ipv6.png" alt="IPv6 Test" class="nav-icon">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://ip.sb" target="_blank">
+                <a href="https://ip.sb" target="_blank" title="IP.sb">
                     <img src="./assets/images/ip.png" alt="IP.sb" class="nav-icon">
                 </a>
             </li>
@@ -96,25 +96,25 @@
             <a href="https://github.com/deerwan" class="link github" target="_blank" title="GitHub">
                 <i class="ri-github-fill"></i>
             </a>
-            <a href="mailto:739914756@qq.com" class="link email" title="Email">
+            <a href="mailto:739914756@qq.com" class="link email" title="邮箱">
                 <i class="ri-mail-line"></i>
             </a>
-            <a href="https://blog.952780.xyz" class="link blog" target="_blank">
+            <a href="https://blog.952780.xyz" class="link blog" target="_blank" title="博客">
                 <i class="ri-article-line"></i>
             </a>
-            <a href="https://www.zhihu.com/people/san-san-61-6" class="link zhihu" target="_blank">
+            <a href="https://www.zhihu.com/people/san-san-61-6" class="link zhihu" target="_blank" title="知乎">
                 <i class="ri-zhihu-line"></i>
             </a>
-            <a href="https://space.bilibili.com/31517542?spm_id_from=333.1007.0.0" class="link bilibili" target="_blank">
+            <a href="https://space.bilibili.com/31517542?spm_id_from=333.1007.0.0" class="link bilibili" target="_blank" title="哔哩哔哩">
                 <i class="ri-bilibili-fill"></i>
             </a>
-            <a href="https://zhiyou.smzdm.com/member/8735360783/" class="link smzdm" target="_blank">
+            <a href="https://zhiyou.smzdm.com/member/8735360783/" class="link smzdm" target="_blank" title="什么值得买">
                 <i class="ri-price-tag-3-line"></i>
             </a>
-            <a href="https://qm.qq.com/cgi-bin/qm/qr?k=zTTTlwf4UfHZUQf3mJ5E4lfhEJv7TO6u&jump_from=webapi&authKey=nKkccmKpMCuhJuzNSzcjZyaLr6eIxeqDuCDJL6A3RQfUYEBV3bCE/lW/ABlq8hCq" class="link qq" target="_blank">
+            <a href="https://qm.qq.com/cgi-bin/qm/qr?k=zTTTlwf4UfHZUQf3mJ5E4lfhEJv7TO6u&jump_from=webapi&authKey=nKkccmKpMCuhJuzNSzcjZyaLr6eIxeqDuCDJL6A3RQfUYEBV3bCE/lW/ABlq8hCq" class="link qq" target="_blank" title="QQ">
                 <i class="ri-qq-fill"></i>
             </a>
-            <a href="javascript:void(0)" class="link theme-switch" onclick="manualToggleTheme()">
+            <a href="javascript:void(0)" class="link theme-switch" onclick="manualToggleTheme()" title="切换主题">
                 <i id="theme-icon" class="ri-moon-line"></i>
             </a>
         </div>
