--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <img src="./assets/images/nezha.png" class="project-icon" alt="Nezha">
                         <div class="project-content">
                             <div class="project-title">Nezha 📊</div>
-                            <div class="project-desc">服务器监控</div>
+                            <div class="project-desc">服务监控</div>
                         </div>
                     </div>
                 </a>
