--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="https://app.spaceship.com" target="_blank" title="Spaceship">
+                <a href="https://spaceship.com" target="_blank" title="Spaceship">
                     <img src="./assets/images/spaceship.png" alt="Spaceship" class="nav-icon">
                 </a>
             </li>
