--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
     </nav>
 
     <div class="container">
-        <h1>Hi 👋, I'm Deer</h1>
+        <h1>𝐇𝐢 👋, 𝐈'𝐦 𝐃𝐞𝐞𝐫</h1>
         <div class="intro">
-            <p>✨ 欢迎访问我的个人主页</p>
-            <p>💻 热爱技术，分享生活</p>
-            <p>🚀 记录成长，探索未来</p>
+            <p>✨ 𝗪𝗲𝗹𝗰𝗼𝗺𝗲 𝘁𝗼 𝗺𝘆 𝗽𝗲𝗿𝘀𝗼𝗻𝗮𝗹 𝗵𝗼𝗺𝗲𝗽𝗮𝗴𝗲</p>
+            <p>💻 𝐋𝐨𝐯𝐞 𝐭𝐞𝐜𝐡𝐧𝐨𝐥𝐨𝐠𝐲, 𝐬𝐡𝐚𝐫𝐞 𝐥𝐢𝐟𝐞</p>
+            <p>🚀 𝐑𝐞𝐜𝐨𝐫𝐝 𝐠𝐫𝐨𝐰𝐭𝐡 𝐚𝐧𝐝 𝐞𝐱𝐩𝐥𝐨𝐫𝐞 𝐭𝐡𝐞 𝐟𝐮𝐭𝐮𝐫𝐞</p>
         </div>
 
         <div class="links">
